# CCJ

./: ARCHITECTURE.md  CMakeLists.txt  PROJECT_NOTES.md
assets/: README.md
assets/themes/default/: rpm_bg.png~
config/: default.json  ek_calibration.json
include/config/: dashboard_config.hpp
include/display/: dashboard.hpp  layout.hpp  theme.hpp
include/display/gauges/: analog_gauge.hpp  analog_gauge_factory.hpp  bar_gauge_factory.hpp  blinker_light.hpp  fuel_gauge.hpp  gauge.hpp  gauge_factory.hpp  gauge_template.hpp  rpm_gauge.hpp  speed_gauge.hpp  temp_gauge.hpp  warning_light.hpp
include/signals/: pulse_reader.hpp  signal_processor.hpp  simulator.hpp
scripts/: gen_gauge_svg.py  gen_warning_svg.py
src/: main.cpp
src/config/: dashboard_config.cpp
src/display/: dashboard.cpp  dashboard.h  layout.cpp
src/display/gauges/: analog_gauge.cpp  analog_gauge_factory.cpp  blinker_light.cpp  fuel_gauge.cpp  fuel_gauge.h  gauge.h  gauge_factory.cpp  rpm_gauge.cpp  rpm_gauge.h  speed_gauge.cpp  speed_gauge.h  temp_gauge.cpp  temp_gauge.h  warning_light.cpp
src/signals/: adc_reader.cpp  adc_reader.h  pulse_reader.cpp  signal_processor.cpp  simulator.cpp  simulator.h
